# sui-object-model-workshop

./: Cargo.toml  README.md
scripts/: keypair.json
scripts/src/lessons/input_objects/: exercise.ts
scripts/src/lessons/return_objects/: exercise.ts
src/: main.rs
src/utils/: faucet.rs  mod.rs  transaction.rs  wallet.rs
