[package]
name = "rust-sdk-101"
version = "0.1.0"
edition = "2024"

[dependencies]
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
sui-types = { git = "https://github.com/mystenlabs/sui", package = "sui-types"}
sui-config = { git = "https://github.com/mystenlabs/sui", package = "sui-config"}
sui-json-rpc-types = { git = "https://github.com/mystenlabs/sui", package = "sui-json-rpc-types"}
tokio = { version = "1.2", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
bcs = "0.1.6"